--- a/index.html
+++ b/index.html
@@ -17,3 +17,12 @@ A Python based program
 <h2><a href="dsppy.mp4" target="_blank"> Process </a></h2>
 
 
+
+<h3><u> Figures </u></h3>
+<img src="Figure_1.png" style="padding-bottom:5%;width:18%;object-fit:contain;pointer-events:none;padding-left:5%"/>
+<img src="Figure_2.png" style="padding-bottom:5%;width:18%;object-fit:contain;pointer-events:none;padding-left:5%"/>
+<img src="Figure_3.png" style="padding-bottom:5%;width:18%;object-fit:contain;pointer-events:none;padding-left:5%"/>
+<img src="Figure_4.png" style="padding-bottom:5%;width:18%;object-fit:contain;pointer-events:none;padding-left:5%"/>
+<img src="Figure_5.png" style="padding-bottom:5%;width:18%;object-fit:contain;pointer-events:none;padding-left:5%"/>
+
+
