--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ Digital Signal Processing
 
 
 
-A Python based program
+Python based program
 
 
 
-<h2><a href="dsppy.mp4" target="_blank"> Process </a></h2>
+<h2><a href="DSPPython.mp4" target="_blank"> Process </a></h2>
 
 
 
